--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ EMAIL_FROM=sender_email_address
 EMAIL_PASSWORD=sender_email_password
 EMAIL_PORT=587
 EMAIL_TO=where_to_send
+
+THRESHOLD_RATE=interest_rate_threshold_cared_about
